4aa_neuralseek.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: neuralseek-mod
  namespace: neuralseek
spec:
  replicas: 1
  selector:
    matchLabels:
      app: neuralseek-mod
  template:
    metadata:
      labels:
        app: neuralseek-mod
    spec:
      volumes:
      - name: neuralseek-config-vol
        configMap:
          name: neuralseek-config
      imagePullSecrets:
      - name: docker
      containers:
      - name: mod
        image: docker.io/cerebralblue/cerebralblue:modcontainer
        securityContext:
          runAsNonRoot: true
          allowPrivilegeEscalation: false
          capabilities:
            drop: ["ALL"]
          seccompProfile:
            type: "RuntimeDefault"
        ports:
        - containerPort: 6424
        - containerPort: 6425
        - containerPort: 6426
        - containerPort: 6427
        - containerPort: 6428
        - containerPort: 6446
        - containerPort: 6447
        - containerPort: 6121
