4bb_neuralseek.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: neuralseek-pg
  namespace: neuralseek
spec:
  replicas: 1
  selector:
    matchLabels:
      app: neuralseek-pg
  template:
    metadata:
      labels:
        app: neuralseek-pg
    spec:
      volumes:
      - name: neuralseek-pg-vol
        persistentVolumeClaim:
          claimName: neuralseek-pg-pvc
      - name: neuralseek-config-vol
        configMap:
          name: neuralseek-config
      imagePullSecrets:
      - name: docker
      containers:
      - name: db
        image: docker.io/cerebralblue/cerebralblue:pgcontainer
        securityContext:
          runAsNonRoot: true
          allowPrivilegeEscalation: false
          capabilities:
            drop: ["ALL"]
          seccompProfile:
            type: "RuntimeDefault"
        ports:
        - containerPort: 5432
        volumeMounts:
        - mountPath: /pg/data:z
          name: neuralseek-pg-vol
