4d_neuralseek.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: neuralseek-app
  namespace: neuralseek
spec:
  replicas: 1
  selector:
    matchLabels:
      app: neuralseek-app
  template:
    metadata:
      labels:
        app: neuralseek-app
    spec:
      volumes:
      - name: neuralseek-app-vol
        persistentVolumeClaim:
          claimName: neuralseek-app-pvc
      - name: neuralseek-config-vol
        configMap:
          name: neuralseek-config
      imagePullSecrets:
      - name: docker-cred-secret
      containers:
      - name: app
        image: <<repo>>/neuralseek/neuralseek-app:latest
        securityContext:
          runAsNonRoot: true
          allowPrivilegeEscalation: false
          capabilities:
            drop: ["ALL"]
          seccompProfile:
            type: "RuntimeDefault"
        ports:
        - containerPort: 8080
        volumeMounts:
        - mountPath: /neuralseek/notes:z
          name: neuralseek-app-vol
